# nft-compres

./: demo.ipynb  procutil.py  pyproject.toml  testimage.pickle
.devcontainer/: devcontainer.json
