[tool.poetry]
name = "soturon"
version = "0.1.0"
description = ""
authors = ["yuki-js <20838151+yuki-js@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.3.0"
numpy = "^1.24.1"
ipykernel = "^6.19.4"
scikit-learn = "^1.2.0"
torch = "^1.13.1"
matplotlib = "^3.6.2"
cvt = {git = "https://github.com/yuki-js/cvlab_toolbox"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.19.4"
pandas = "^1.5.2"
black = {version = "^23.1a1", allow-prereleases = true}
ipywidgets = "^8.0.4"
ipympl = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
